# rinha-backend-2026

./: .gitignore  Dockerfile  Dockerfile.md  LICENSE  README.md  docker-compose.yml  info.json  nginx.conf  preprocess.py
app/: main.py  pyproject.toml
app/config/: config.py
app/controller/: api.py
app/models/: models.py
app/services/: references.py  search.py  service.py  vectorize.py
data/: labels.npy
