[project]
name = "rinha-backend2026"
version = "0.1.0"
description = ""
authors = [
    {name = "cassianasoares",email = "cassianassilva@hotmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "faiss-cpu (>=1.7.2,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "orjson (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
